# E3Bench

./: .gitignore  LICENSE  README.md
src/ina_profiler/: CMakeLists.txt
src/ina_profiler/src/: CMakeLists.txt
src/ina_profiler/src/profiler/: CMakeLists.txt  board_jon.h
src/ina_profiler/src/profiler/clock/: CMakeLists.txt  clock_utils.cpp  clock_utils.h
src/ina_profiler/src/profiler/clock/emc/: CMakeLists.txt  emc_utils.h  get_emc_avail_freqs.cpp  get_emc_cur_freq.cpp  set_emc_cur_freq.cpp  set_emc_max_freq.cpp  set_emc_min_freq.cpp
src/ina_profiler/src/profiler/clock/gpu/: CMakeLists.txt  get_gpu_avail_freqs.cpp  get_gpu_cur_freq.cpp  gpu_utils.h  set_gpu_cur_freq.cpp  set_gpu_max_freq.cpp  set_gpu_min_freq.cpp
src/ina_profiler/src/profiler/power/: CMakeLists.txt  ina3221.h  power_utils.cpp  power_utils.h
src/ina_profiler/src/profiler/power/vdd_cpu_gpu_cv/: CMakeLists.txt  main.cpp  vdd_cpu_gpu_cv.cpp  vdd_cpu_gpu_cv.h
src/ina_profiler/src/profiler/power/vdd_in/: CMakeLists.txt  main.cpp  vdd_in.cpp  vdd_in.h
src/ina_profiler/src/profiler/power/vdd_soc/: CMakeLists.txt  main.cpp  vdd_soc.cpp  vdd_soc.h
src/lib/e3bench/: utils.py
src/lib/e3bench/profilers/smartpower3/: profiler.py
src/lib/e3bench/profilers/smiprof/: profiler.sh
src/lib/e3bench/profilers/tegrastats/: __init__.py  post_process.py  profiler.sh  regex.py
src/lib/e3bench/wrappers/: __init__.py
src/lib/e3bench/wrappers/latency/: __init__.py  basic.py  dynamic.py  mix.py
src/lib/e3bench/wrappers/power/: __init__.py  basic.py
src/reproduce/: dyn_lat_wrapper.py  lat_wrapper.py  mix_lat_wrapper.py  pow_wrapper.py
src/reproduce/wait_ms/: process_exp1.py  process_exp2.py  process_exp3.py  process_exp4.py  prog.py  run_exp1.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh
